--- a/app/src/main/res/layout/layout_item.xml
+++ b/app/src/main/res/layout/layout_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <LinearLayout
         android:id="@+id/ll_listItem"
@@ -13,12 +13,13 @@
             android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:text="@string/app_name"
-            android:textSize="18dp"
-            android:gravity="center_vertical"
             android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:text="@string/app_name"
             android:textColor="@color/colorBlack"
-            android:paddingLeft="10dp"/>
+            android:textSize="18dp" />
+
         <ImageView
             android:id="@+id/iv_expand"
             android:layout_width="45dp"
@@ -29,8 +30,8 @@
         android:id="@+id/rv_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
         android:background="@color/colorGray"
+        android:visibility="gone"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 
 </LinearLayout>
